# websocket

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  IMPLEMENTATION.md  README.md
docs/develop/: build.md  index.md  jsonrpc.md  websocket.md
docs/develop/examples/: index.md
docs/develop/examples/jsonrpc/: browser-client.md  index.md  nodejs-client.md  simple-server.md
docs/develop/examples/websocket/: echo-server.md  frame-test.md  index.md
docs/develop/jsonrpc/: index.md  notification-builder.md  request-handler.md  server.md  test-notification-builder.md  test-request-handler.md  test-server.md
docs/develop/websocket/: frame-builder.md  frame-parser.md  handshake.md  index.md  session.md  test-frame-builder.md  test-frame-parser.md  test-handshake.md  test-session.md  websocket-server.md
docs/refactor/: acceptance-criteria.md  api-contract.md  appendix-headers.md  architecture.md  callback-lifecycle.md  cmake-changes.md  execution-order.md  interface-changes.md  migration-steps.md  refactor-plan.md  test-requirements.md
examples/: CMakeLists.txt  client.html  simple_server.cc  simple_server.cc.bak
examples/jsonrpc/: CMakeLists.txt  simple_server.cc
examples/jsonrpc/nodejs-client/: README.md  client.js  package-lock.json
examples/nodejs-client/: package.json
examples/websocket/: CMakeLists.txt  echo_server.cc  frame_test.html
include/darwincore/jsonrpc/: jsonrpc_server.h  notification_builder.h  request_handler.h
include/darwincore/websocket/: frame_builder.h  frame_parser.h  handshake_handler.h  jsonrpc_server.h  session.h  websocket_server.h
include/darwincore/websocket/jsonrpc/: notification_builder.h  request_handler.h
jsclient/: README.md  StressTest.js  WSClient.js  package-lock.json  package.json  stress-test.js  test-jsonrpc.sh
src/: CMakeLists.txt  frame_builder.cc  frame_parser.cc  handshake_handler.cc  jsonrpc_server.cc
src/jsonrpc/: jsonrpc_server.cc  notification_builder.cc  request_handler.cc
src/websocket/: frame_builder.cc  frame_parser.cc  handshake_handler.cc  session.cc  websocket_server.cc
test/: CMakeLists.txt  frame_builder_test.cc  frame_parser_test.cc  handshake_handler_test.cc  jsonrpc_test.cc
test/jsonrpc/: jsonrpc_server_test.cc  notification_builder_test.cc  request_handler_test.cc
test/websocket/: frame_builder_test.cc  frame_parser_test.cc  handshake_handler_test.cc  websocket_server_test.cc  websocket_session_test.cc
